--- a/1/src/index.html
+++ b/1/src/index.html
@@ -11,9 +11,7 @@
 </head>
 
 <body>
-  <p class="text-sky-900 font-Kaushan">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus
-    omnis libero, doloribus repellat laborum voluptas quam, reprehenderit minima fuga molestiae, pariatur consequatur
-    natus nihil. Eligendi voluptatibus labore laboriosam exercitationem!</p>
+  <p class="text-sky-900 font-Kaushan">Lorem ipsum</p>
 </body>
 
 </html>
