success add font-family

--- a/1/src/index.html
+++ b/1/src/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-  <p class="text-sky-900 font-Kaushan">Lorem ipsum</p>
+  <p class="text-sky-900 font-Tilt">Lorem ipsum</p>
+  <p class="text-center text-red-300 font-MuolLight">ហេង គុនមុនី</p>
 </body>
 
 </html>
